kustomize/traefik/traefik-internet.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: traefik.roelvandegrint.com-ingress
 namespace: kube-system
 annotations:
  traefik.ingress.kubernetes.io/router.entrypoints: websecure
  cert-manager.io/issuer: letsencrypt-production-issuer
spec:
 tls:
   - hosts:
       - traefik.roelvandegrint.com
     secretName: traefik-ingress-http-production
 rules:
   - host: traefik.roelvandegrint.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: traefik-dashboard
               port:
                 number: 9000
